before course start

--- a/doc/pub/Exercises/Week2/TIF285_exercise_sum_product_rule.ipynb
+++ b/doc/pub/Exercises/Week2/TIF285_exercise_sum_product_rule.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -104,6 +104,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -131,15 +138,64 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.013\n",
+      "0.227\n",
+      "0.24\n",
+      "0.493\n",
+      "0.267\n",
+      "0.76\n",
+      "0.507\n",
+      "0.493\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x in [1,17,18,37,20,57,38,37]:\n",
+    "    print(round(x/75,3))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "2. *What is $\\pr(short, blue)$? Is this a joint or conditional probability?  What is $\\pr(blue)$? \n",
     "<br>From the product rule, what is $\\pr(short | blue)$?  Can you read this result directly from the table?*\n",
-    "<br>\n",
-    "<br>\n",
+    "<br> \n",
+    "<br>The probability of being short AND haveing blue eyes. This is a joint distribution. $\\pr(blue)=0.507$ and $\\pr(short|blue)=37/38$\n",
     "<br>\n",
     "<br>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9730440499671269\n",
+      "0.9736842105263158\n"
+     ]
+    }
+   ],
+   "source": [
+    "# likelihood = probability of having blue eyes conditioned on being short\n",
+    "# prior = probability of being short\n",
+    "# evidence = probability of having blue eyes\n",
+    "p_short_cond_blue_1 =( (37/57)*0.76)/0.507\n",
+    "p_short_cond_blue_2 = 37/38\n",
+    "print(p_short_cond_blue_1)\n",
+    "print(p_short_cond_blue_2)"
    ]
   },
   {
@@ -154,14 +210,40 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6491228070175439\n",
+      "0.6491228070175439\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(37/57)\n",
+    "print(p_short_cond_blue_1*0.507/0.76)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "4. *What rule does the second row (the one starting with \"Short\") illustrate?  Write it out in $\\pr(\\cdot)$ notation.* \n",
     "<br>\n",
     "<br>\n",
-    "<br>"
+    "<br>$\\pr(blue|short), \\pr(brown|short), \\pr(blue|short) + \\pr(brown|short)$ (sum rule)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -169,7 +251,7 @@
    "source": [
     "5. *Are the probabilities of being tall and having brown eyes mutually independent?  Why or why not?*\n",
     "<br>\n",
-    "<br>\n",
+    "<br> They are (probably) NOT mutually independent since $\\pr(tall)\\neq\\pr(tall|brown)$\n",
     "<br>\n",
     "\n"
    ]
@@ -198,7 +280,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
