--- a/doc/pub/Exercises/Week1/TIF285_exercise_Jupyter_Python_intro_01.ipynb
+++ b/doc/pub/Exercises/Week1/TIF285_exercise_Jupyter_Python_intro_01.ipynb
@@ -1097,19 +1097,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1.09861229 2.30258509 2.39789527]\n"
+      "[ 3. 10. 11.]\n"
      ]
     }
    ],
    "source": [
+    "import numpy as np\n",
     "A = np.log(np.array([ [4.0, 7.0, 8.0], [3.0, 10.0, 11.0], [4.0, 5.0, 7.0] ]))\n",
+    "A = np.array([ [4.0, 7.0, 8.0], [3.0, 10.0, 11.0], [4.0, 5.0, 7.0] ])\n",
     "# print the second row, row-major order and elements start with 0\n",
     "print(A[1,:])"
    ]
